@@ -20,7 +20,6 @@ require 'data_miner/script'
 require 'data_miner/dictionary'
 require 'data_miner/step'
 require 'data_miner/step/import'
-require 'data_miner/step/tap'
 require 'data_miner/step/process'
 require 'data_miner/run'
 require 'data_miner/unit_converter'
