@@ -63,7 +63,6 @@ class DataMiner
     #
     # @see DataMiner::Script#import Creating an import step by calling DataMiner::Script#import from inside a data miner script
     # @see DataMiner::Script#process Creating a process step by calling DataMiner::Script#process from inside a data miner script
-    # @see DataMiner::Script#tap Creating a tap step by calling DataMiner::Script#tap from inside a data miner script
     #
     # @example Creating steps
     #   class MyModel < ActiveRecord::Base
